[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Kazon Wilson", email = "10987837+kwilson21@users.noreply.github.com"},
]
dependencies = [
    "py-cord",
    "fastapi",
    "uvicorn[standard]",
    "honcho",
    "fastapi-discord",
    "bidict",
    "pre-commit",
    "hashids",
]
requires-python = ">=3.11"
license = {text = "GNU"}

[project.urls]
Homepage = ""
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
start.cmd = "uvicorn run:app --port $PORT --host 0.0.0.0"
start.env_file = ".env"
